--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             </div>
         </div>
         <div class="h640 hGap24"></div>
+        <div>
+            <img id="mainImg" src="imgs/main/custom.png" alt="">
+            <img id="mainImg" src="imgs/main/showcase.png" alt="">
+            <img id="mainImg" src="imgs/main/techinfo.png" alt="">
+            <img id="mainImg" src="imgs/main/history.png" alt="">
+        </div>
     </div>
 </body>
 </html>
